force-app/main/default/objects/BMCServiceDesk__Problem__c/BMCServiceDesk__Problem__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpProblem</customHelpPage>
    <description>This object allows you to store data for problems..</description>
    <label>Problem</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Problem #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Problems</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>