force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__AllTaskCloseController__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__AllTaskCloseController__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to activate the workflow for sending email to Problem owner. The value is toggled to True if the last value was False to activate field update.</description>
    <label>All Tasks Closed Controller</label>
    <type>Checkbox</type>
</CustomField>