force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Category__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Category__c</fullName>
    <description>This field stores the category linked to the problem</description>
    <formula>BMCServiceDesk__FKCategory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the problem&apos;s category. Categories allow you to classify the problem using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
    <label>Category~</label>
    <type>Text</type>
</CustomField>