force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__ClosureCategory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ClosureCategory__c</fullName>
    <label>Closure Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Resolved/Fixed</fullName>
            </value>
            <value>
                <fullName>Unable to resolve</fullName>
            </value>
            <value>
                <fullName>Workaround created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>