force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Compliant__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Compliant__c</fullName>
    <description>This field stores the value if the problem is compliant or not</description>
    <formula>IF(ISNULL(BMCServiceDesk__Due_Date_Time__c), &quot;YES&quot;, 
	( IF( ISNULL(BMCServiceDesk__Closed_Date_Time__c), ( IF(BMCServiceDesk__Due_Date_Time__c &gt;= NOW(), &quot;YES&quot;, &quot;NO&quot;)), 
		( IF(BMCServiceDesk__Due_Date_Time__c &gt;= BMCServiceDesk__Closed_Date_Time__c, &quot;YES&quot;, &quot;NO&quot;))
	))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliant</label>
    <type>Text</type>
</CustomField>