force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Deep_View__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Deep_View__c</fullName>
    <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__DeepView?id=&quot;+Id, IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/deep-view.png&quot;, &quot;&quot;, 18, 18), &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SmartView</label>
    <type>Text</type>
</CustomField>