force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Due_Date_Time__c</fullName>
    <description>This field stores the date and time when the problem is due</description>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>