force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__FKBroadcast__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBroadcast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the foreign key value of the linked broadcast</description>
    <label>Broadcast</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Broadcasts__c.BMCServiceDesk__state__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Broadcasts__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select open and active broadcast.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Broadcasts__c</referenceTo>
    <relationshipLabel>Problems</relationshipLabel>
    <relationshipName>Problems</relationshipName>
    <type>Lookup</type>
</CustomField>