force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__FKCategory__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the foreign key value of the linked category</description>
    <inlineHelpText>From the list of options, select the problem&apos;s category. Categories allow you to classify the problem using standard classifications, which can be easily tracked for reporting purposes.</inlineHelpText>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Category__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select an active category.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Category__c</referenceTo>
    <relationshipLabel>Problems</relationshipLabel>
    <relationshipName>Problems</relationshipName>
    <type>Lookup</type>
</CustomField>