force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__FKClosed_By__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKClosed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the foreign key value of the linked user who closed the problem</description>
    <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
    <label>Staff ID Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Problems</relationshipName>
    <type>Lookup</type>
</CustomField>