force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__FKImpact__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKImpact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the foreign key value of the linked impact</description>
    <inlineHelpText>From the list of options, select the problem&apos;s level of impact. The level of impact and the urgency are used to calculate the priority of the problem.</inlineHelpText>
    <label>Impact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Impact__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select an active impact.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Impact__c</referenceTo>
    <relationshipLabel>Problems</relationshipLabel>
    <relationshipName>Problems</relationshipName>
    <type>Lookup</type>
</CustomField>