force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__FKStatus__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the foreign key value of the linked status</description>
    <inlineHelpText>From the list of options, select the appropriate status for the problem.</inlineHelpText>
    <label>Status</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select an active status that applies to problems.</errorMessage>
        <filterItems>
            <field>BMCServiceDesk__Status__c.BMCServiceDesk__appliesToProblem__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__Status__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Status__c</referenceTo>
    <relationshipLabel>Problems</relationshipLabel>
    <relationshipName>Problems</relationshipName>
    <type>Lookup</type>
</CustomField>