force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Known_Error__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Known_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores the value if the problem has known error or not</description>
    <inlineHelpText>Select this field if you want to indicate that the problem is a known error. A known error is a problem for which the root cause is identified.</inlineHelpText>
    <label>Known Error</label>
    <type>Checkbox</type>
</CustomField>