force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Number_of_linked_Changes__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Number_of_linked_Changes__c</fullName>
    <description>This field displays the number of changes linked to the problem</description>
    <label>Number of linked Changes</label>
    <summaryForeignKey>BMCServiceDesk__Change_Problem_Link__c.BMCServiceDesk__FKProblem__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>