force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Number_of_linked_Incidents__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Number_of_linked_Incidents__c</fullName>
    <description>This field displays the number of incidents linked to the problem</description>
    <label>Number of linked Incidents</label>
    <summaryForeignKey>BMCServiceDesk__Incident_Problem_Link__c.BMCServiceDesk__FKProblem__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>