force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Open_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Open_Date_Time__c</fullName>
    <description>This field stores the date and time when the problem opened</description>
    <inlineHelpText>This field is automatically set to the date and time at which the problem was created.</inlineHelpText>
    <label>Opened Date</label>
    <type>DateTime</type>
</CustomField>