force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Priority__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Priority__c</fullName>
    <description>This field stores the priority linked to the problem</description>
    <formula>BMCServiceDesk__FKPriority__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The priority is calculated depending on the urgency and impact values that you have selected.</inlineHelpText>
    <label>Priority~</label>
    <type>Text</type>
</CustomField>