force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Problem_Description__c</fullName>
    <description>This field stores the details of the description regarding the problem</description>
    <inlineHelpText>Use this field to enter a description of the problem.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>