force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Problem_Resolution__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Problem_Resolution__c</fullName>
    <description>This field stores the details of the resolution regarding the problem</description>
    <inlineHelpText>Use this field to specify what has been done to fix the problem. Provide detailed solution instructions. For example, describe the configuration setting that must be applied to a configuration item while installing the configuration item.</inlineHelpText>
    <label>Resolution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>