force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Staff_ID_Closed_By__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Staff_ID_Closed_By__c</fullName>
    <description>This field stores the user name who closed the problem</description>
    <formula>BMCServiceDesk__FKClosed_By__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
    <label>Staff ID Closed By~</label>
    <type>Text</type>
</CustomField>