force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__State__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__State__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field stores the value if the problem is open or closed</description>
    <label>State</label>
    <type>Checkbox</type>
</CustomField>