force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Status__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Status__c</fullName>
    <description>This field stores the status linked to the problem</description>
    <formula>BMCServiceDesk__FKStatus__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the appropriate status for the problem.</inlineHelpText>
    <label>Status~</label>
    <type>Text</type>
</CustomField>