force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Task_Closed_Controller__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Task_Closed_Controller__c</fullName>
    <description>This field is used to activate the workflow for sending email to Problem owner after closing each linked task. The value is set with the linked task name to activate field update.</description>
    <label>Task Closed Controller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>