force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Total_Duration__c</fullName>
    <description>This field stores the total duration of the problem</description>
    <label>Total Duration (minutes)</label>
    <summarizedField>BMCServiceDesk__Problem_History__c.BMCServiceDesk__Duration__c</summarizedField>
    <summaryForeignKey>BMCServiceDesk__Problem_History__c.BMCServiceDesk__FKProblem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>