force-app/main/default/objects/BMCServiceDesk__Problem__c/fields/BMCServiceDesk__Workaround_details__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Workaround_details__c</fullName>
    <description>This field stores the details of the workaround for the problem if any</description>
    <inlineHelpText>Use this field to enter the temporary or permanent alternative to fixing the current problem, if the alternative is available.</inlineHelpText>
    <label>Workaround Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>