force-app/main/default/objects/BMCServiceDesk__Problem__c/validationRules/BMCServiceDesk__Cannot_Update_Closed_Problem.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Cannot_Update_Closed_Problem</fullName>
    <active>true</active>
    <description>This rule does not allow user to edit record if it is closed.</description>
    <errorConditionFormula>AND(NOT(ISCHANGED(BMCServiceDesk__RF_HasAttachments__c)), NOT( BMCServiceDesk__State__c ) , NOT( PRIORVALUE( BMCServiceDesk__State__c ) ),NOT( ISNEW() ), NOT( ISCHANGED( BMCServiceDesk__Total_Duration__c ) ), NOT( ISCHANGED( BMCServiceDesk__Number_of_linked_Changes__c ) ), NOT( ISCHANGED( BMCServiceDesk__Number_of_linked_Incidents__c ) ), NOT( AND( ISCHANGED(BMCServiceDesk__Due_Date_Time__c), NOT(BMCServiceDesk__State__c), (LastModifiedDate - BMCServiceDesk__Closed_Date_Time__c) &lt; 0.0003 , (LastModifiedDate - BMCServiceDesk__Closed_Date_Time__c) &gt; -0.1 )) )</errorConditionFormula>
    <errorMessage>This problem is closed. Reopen the problem to modify it.</errorMessage>
</ValidationRule>