force-app/main/default/objects/BMCServiceDesk__Problem__c/validationRules/BMCServiceDesk__dueDateMustBeAfterOpenedDate.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__dueDateMustBeAfterOpenedDate</fullName>
    <active>true</active>
    <description>Due date must come after Opened Date.</description>
    <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__Due_Date_Time__c),ISBLANK(	BMCServiceDesk__Due_Date_Time__c) ) ),NOT(ISCHANGED( BMCServiceDesk__Open_Date_Time__c ) ), BMCServiceDesk__Due_Date_Time__c &lt; BMCServiceDesk__Open_Date_Time__c)</errorConditionFormula>
    <errorMessage>The Due Date must be later than the Opened Date</errorMessage>
</ValidationRule>