force-app/main/default/objects/BMCServiceDesk__Problem__c/validationRules/BMCServiceDesk__KnownErrorMustBeCheckedForWorkaround.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__KnownErrorMustBeCheckedForWorkaround</fullName>
    <active>false</active>
    <errorConditionFormula>IF( AND( ISBLANK(BMCServiceDesk__Work_Around__c)=FALSE,BMCServiceDesk__Known_Error__c=FALSE), TRUE,FALSE)</errorConditionFormula>
    <errorMessage>Select the Known Error field to save the workaround</errorMessage>
</ValidationRule>