force-app/main/default/objects/BMCServiceDesk__Problem__c/validationRules/Resolution_required_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_required_rule</fullName>
    <active>true</active>
    <description>This rule requires Resolution field when state = closed.</description>
    <errorConditionFormula>AND(
    BMCServiceDesk__State__c  = False,
    ISBLANK( BMCServiceDesk__Problem_Resolution__c ) 
)</errorConditionFormula>
    <errorMessage>Please enter a Resolution.</errorMessage>
</ValidationRule>