force-app/main/default/objects/BMCServiceDesk__Problem__c/validationRules/Staff_required_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_required_rule</fullName>
    <active>true</active>
    <description>This rule requires the staff field when status &lt;&gt; OPENED.</description>
    <errorConditionFormula>AND(
    BMCServiceDesk__Status__c  &lt;&gt; &quot;OPENED&quot;,
    ISBLANK( BMCServiceDesk__FKStaff__c ) 
)</errorConditionFormula>
    <errorMessage>Please assign a staff member.</errorMessage>
</ValidationRule>