force-app/main/default/objects/BMCServiceDesk__Problem__c/listViews/BMCServiceDesk__Remedyforce_Problem_View.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__Remedyforce_Problem_View</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__FKPriority__c</columns>
    <columns>BMCServiceDesk__Problem_Description__c</columns>
    <columns>BMCServiceDesk__FKStatus__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>BMCServiceDesk__State__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BMCServiceDesk__Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Remedyforce Problem View</label>
    <language>en_US</language>
</ListView>