force-app/main/default/objects/BMCServiceDesk__Problem__c/listViews/Incident_US_Problem.listView-meta.xml
<ListView>
    <fullName>Incident_US_Problem</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Desk - US</label>
    <queue>Incident_US</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>